k8s/api-httproute.yaml
# api-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: api-route
  namespace: api-app
spec:
  parentRefs:
    - name: nginx-gateway
      namespace: nginx-app      # point to existing gateway
  hostnames:
    - "api.ghostengineer.xyz"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: api-app-svc
          port: 80
